--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-concat-css": "~2.3.0",
     "gulp-csso": "~2.0.0",
     "gulp-eslint": "~3.0.1",
+    "gulp-imagemin": "^3.1.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.0.0",
     "gulp-pug": "^3.2.0",
@@ -22,9 +23,9 @@
     "gulp-sourcemaps": "~2.4.0",
     "gulp-svg-sprite": "^1.3.6",
     "gulp-svgmin": "^1.2.3",
+    "gulp-tinypng": "^1.0.2",
     "gulp.spritesmith": "^6.3.0",
-    "jquery": "~3.1.1",
-    "tinify": "^1.5.0"
+    "jquery": "~3.1.1"
   },
   "dependencies": {
     "normalize.css": "~5.0.0"
