--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "gulp-svg-sprite": "^1.3.6",
     "gulp-svgmin": "^1.2.3",
     "gulp-tinypng": "^1.0.2",
-    "gulp.spritesmith": "^6.3.0",
-    "jquery": "~3.1.1"
+    "gulp.spritesmith": "^6.3.0"
   },
   "dependencies": {
-    "normalize.css": "~5.0.0"
+    "normalize.css": "~5.0.0",
+    "jquery": "~3.1.1"
   }
 }
